Updates public build to support Java 22. This version requires certain javac and java flags that were optional before, and dropped support for the javac `-source 7` (use Java 7 syntax) flag.
PiperOrigin-RevId: 634799184